# mscons-restify

./: .flake8  .gitignore  .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
docs/: architecture.md  edifact-mscons-parser.openapi.yaml  generate-openapi-endpoints.md  mscons-parsing-process.md
src/msconsparser/: __init__.py  main.py
src/msconsparser/application/: __init__.py
src/msconsparser/application/services/: __init__.py  parser_service.py
src/msconsparser/application/usecases/: __init__.py  parse_message_usecase.py
src/msconsparser/domain/: __init__.py
src/msconsparser/domain/models/: __init__.py
src/msconsparser/domain/ports/: __init__.py
src/msconsparser/domain/ports/inbound/: __init__.py  message_parser_port.py
src/msconsparser/infrastructure/: __init__.py  logging_config.py
src/msconsparser/libs/: __init__.py
src/msconsparser/libs/edifactmsconsparser/: __init__.py  edifact_mscons_parser.py
src/msconsparser/libs/edifactmsconsparser/converters/: __init__.py  bgm_segment_converter.py  cci_segment_converter.py  com_segment_converter.py  cta_segment_converter.py  dtm_segment_converter.py  lin_segment_converter.py  loc_segment_converter.py  nad_segment_converter.py  pia_segment_converter.py  qty_segment_converter.py  rff_segment_converter.py  segment_converter.py  sts_segment_converter.py  una_segment_converter.py  unb_segment_converter.py  unh_segment_converter.py  uns_segment_converter.py  unt_segment_converter.py  unz_segment_converter.py
src/msconsparser/libs/edifactmsconsparser/exceptions/: __init__.py  contrl_exceptions.py  parser_exceptions.py
src/msconsparser/libs/edifactmsconsparser/handlers/: __init__.py  bgm_segment_handler.py  cci_segment_handler.py  com_segment_handler.py  cta_segment_handler.py  dtm_segment_handler.py  lin_segment_handler.py  segment_handler.py  (+13 more)
tests/: conftest.py  test_mscons_file_upload.py  test_mscons_parser_api.py  test_simple_parser.py
tests/msconsparser/application/services/: test_parser_service.py
tests/msconsparser/application/usecases/: test_parse_message_usecase.py
tests/msconsparser/infrastructure/: test_logging_config.py
tests/msconsparser/libs/edifactmsconsparser/: test_edifact_mscons_parser.py
tests/samples/: mscons-message-example-expected-response.json  mscons-message-example-simple.txt  mscons-message-example-una-spec-expected-response.json  mscons-message-example-una-spec.txt  mscons-message-example.txt
(+63 files in other folders)
