[project]
name = "MSCONSRestify"
version = "1.204c.0"
description = "The EDIFACT MSCONS parser rest-api application (MSCONSRestify) parsing EDIFACT MSCONS messages (energy sector, DE/AT/CH) based on version [2.4c](https://bdew-mako.de/linkPdf/9645)."
authors = [
    { name="Viet Hai Nguyen", email="me@viethainguyen.de" }
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
dependencies = [
    # Web framework and related
    "fastapi>=0.115.2",
    "starlette>=0.40.0",
    "uvicorn>=0.13.4",

    # HTTP and API related
    "aiofiles>=23.1.0",
    "httptools>=0.3.0,<0.7.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.19",
    "requests>=2.32.0",

    # Data validation and serialization
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",
    "orjson>=3.9.15",
    "ujson>=5.4.0",

    # Utilities
    "python-dotenv>=0.17.1",
    "PyYAML>=5.4.1,<6.1.0",
    "typing-extensions>=4.13.2",

    # Server components
    "h11>=0.16.0",
    "uvloop>=0.21.0",
    "websockets>=10.0",
    "psutil>=7.0.0",

    # Additional dependencies from requirements.txt
    "aniso8601>=7.0.0",
    "async-exit-stack>=1.0.1",
    "async-generator>=1.10",
    "certifi>=2024.7.4",
    "chardet>=4.0.0",
    "click>=7.1.2",
    "dnspython>=2.6.1",
    "graphene>=2.1.8",
    "graphql-core>=2.3.2",
    "graphql-relay>=2.0.1",
    "idna>=3.7",
    "itsdangerous>=1.1.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=2.0.1",
    "promise>=2.3",
    "Rx>=1.6.1",
    "watchgod>=0.7",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.4.0",

    # Development tools
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/h2nguyen/mscons-restify"
"Repository" = "https://github.com/h2nguyen/mscons-restify"
"Documentation" = "https://github.com/h2nguyen/mscons-restify/tree/main/docs"
"Bug Tracker" = "https://github.com/h2nguyen/mscons-restify/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msconsparser"]

[tool.uv]
# UV package manager configuration
required-version = ">=0.7.12"

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120
